Added CSS styling

--- a/milestone3/static/css/style.css
+++ b/milestone3/static/css/style.css
@@ -13,3 +13,10 @@ main {
     visibility: hidden ;
     height: 0px;
 }
+
+.topnav, .footernav{
+    background-image: url(../sportsmassagebanner.png) ;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover;
+}
