--- a/milestone3/templates/add_treatment.html
+++ b/milestone3/templates/add_treatment.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Add Treatment</h3>
+<h3 class="text-darken-4 center-align">Add Treatment</h3>
 
 <div class="row card-panel grey lighten-5">
     <form class="col s12" method="POST" action="{{ url_for('add_treatment') }}">
         <!-- treatment name -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-pencil-alt prefix text-darken-4"></i>
                 <input id="treatment_name" name="treatment_name" minlength="5" maxlength="50" type="text" class="validate" required>
                 <label for="treatment_name">Treatment Name</label>
             </div>
@@ -16,7 +16,7 @@
         <!-- treatment description -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-align-left prefix text-darken-4"></i>
                 <textarea id="treatment_description" name="treatment_description" minlength="5" maxlength="200"
                     type="text" class="materialize-textarea validate" required></textarea>
                 <label for="treatment_description">Treatment Description</label>
@@ -25,7 +25,7 @@
         <!-- due date -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-calendar-alt prefix text-darken-4"></i>
                 <input id="due_date" name="due_date" type="text" class="datepicker validate" required>
                 <label for="due_date">Due Date</label>
             </div>
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <div class="switch">
-                    <i class="fas fa-exclamation-circle prefix light-blue-text text-darken-4"></i>
+                    <i class="fas fa-exclamation-circle prefix text-darken-4"></i>
                     <label for="is_urgent">
                         <input id="is_urgent" name="is_urgent" type="checkbox">
                         <span class="lever"></span>
@@ -46,7 +46,7 @@
         <!-- client id -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-folder-open prefix text-darken-4"></i>
                 <select id="client_id" name="client_id" class="validate" required>
                     <option value="" disabled selected>Choose Client</option>
                     {% for client in clients %}
@@ -59,7 +59,7 @@
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
-                <button type="submit" class="btn-large light-blue darken-1">
+                <button type="submit" class="btn-large orange darken-1">
                     Add Treatment <i class="fas fa-plus-square right"></i>
                 </button>
             </div>
