--- a/milestone3/templates/clients.html
+++ b/milestone3/templates/clients.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Clients</h3>
+<h3 class="text-darken-4 center-align">Clients</h3>
 
 <div class="row">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_client') }}" class="btn-large light-blue darken-2">
+        <a href="{{ url_for('add_client') }}" class="btn-large orange darken-2">
             Add Client <i class="fas fa-plus-square right"></i>
         </a>
     </div>
@@ -14,7 +14,7 @@
 <div class="row">
     {% for client in clients %}
     <div class="col s12 m6 l3">
-        <div class="card light-blue darken-4 center-align">
+        <div class="card orange darken-4 center-align">
             <div class="card-content white-text">
                 <span class="card-title">{{ client.client_name }}  - <i class="fas fa-cog"></i></span>
                 <div>
