--- a/milestone3/templates/edit_treatment.html
+++ b/milestone3/templates/edit_treatment.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Edit Treatment</h3>
+<h3 class="text-darken-4 center-align">Edit Treatment</h3>
 
 <div class="row card-panel grey lighten-5">
     <form class="col s12" method="POST" action="{{ url_for('edit_treatment', treatment_id=treatment.id) }}">
         <!-- treatment name -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-pencil-alt prefix text-darken-4"></i>
                 <input id="treatment_name" name="treatment_name" value="{{ treatment.treatment_name }}" minlength="5" maxlength="50"
                     type="text" class="validate" required>
                 <label for="treatment_name">Treatment Name</label>
@@ -17,7 +17,7 @@
         <!-- treatment description -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-align-left prefix text-darken-4"></i>
                 <textarea id="treatment_description" name="treatment_description" minlength="5" maxlength="200" type="text"
                     class="materialize-textarea validate" required>
                     {{- treatment.treatment_description -}}
@@ -28,7 +28,7 @@
         <!-- due date -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-calendar-alt prefix text-darken-4"></i>
                 <input id="due_date" name="due_date" type="text" value="{{ treatment.due_date.strftime('%d %B, %Y') }}"
                     class="datepicker validate" required>
                 <label for="due_date">Due Date</label>
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <div class="switch">
-                    <i class="fas fa-exclamation-circle prefix light-blue-text text-darken-4"></i>
+                    <i class="fas fa-exclamation-circle prefix text-darken-4"></i>
                     <label for="is_urgent">
                         {% if treatment.is_urgent == True %}
                             <input id="is_urgent" name="is_urgent" type="checkbox" checked>
@@ -54,7 +54,7 @@
         <!-- client id -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-folder-open prefix text-darken-4"></i>
                 <select id="client_id" name="client_id" class="validate" required>
                     <option value="" disabled>Choose Client</option>
                     {% for client in clients %}
@@ -71,7 +71,7 @@
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
-                <button type="submit" class="btn-large light-blue darken-1">
+                <button type="submit" class="btn-large orange darken-1">
                     Edit Treatment <i class="fas fa-edit right"></i>
                 </button>
             </div>
