--- a/milestone3/templates/base.html
+++ b/milestone3/templates/base.html
@@ -2,54 +2,81 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-        type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+        integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    <title>Sports Massage App</title>
+    {% block styles %}
+    {% endblock %}
+    <title>Treatment Manager</title>
 </head>
-
 <body>
 
-    <header>
+	<header>
         <!-- top navbar -->
-        <nav class="topnav">
-            <div class="nav-wrapper">
-            <a href="{{ url_for('home') }}" class="brand-logo">Sports Therapy Manager</a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="{{ url_for('clients') }}">Clients</a></li>
-                <li><a href="{{ url_for('add_treatment') }}">New Treatment</a></li>
-            </ul>
-            </div>
-        </nav>
+		<nav class="nav-extended text-shadow topnav darken-1">
+			<div class="nav-wrapper">
+				<a href="{{ url_for('get_treatments') }}" class="brand-logo">Treatment Manager</a>
+				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+				<ul class="right hide-on-med-and-down">
+					<li><a href="{{ url_for('get_treatments') }}">Home</a></li>
+                    {% if session.user %}
+                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{ url_for('add_treatment') }}">New Treatment</a></li>
+                        {% if session.user|lower == "goodrem"|lower %}
+                            <li><a href="{{ url_for('get_clients') }}">Manage Clients</a></li>
+                        {% endif %}
+                        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('login') }}">Log In</a></li>
+                        <li><a href="{{ url_for('register') }}">Register</a></li>
+                    {% endif %}
+				</ul>
+			</div>
+		</nav>
 
         <!-- mobile sidenav -->
-        <ul class="sidenav topnav" id="mobile-demo">
-            <li><a href="{{ url_for('home') }}">Home</a></li>
-            <li><a href="{{ url_for('clients') }}">Clients</a></li>
-            <li><a href="{{ url_for('add_treatment') }}">New Treatment</a></li>
-        </ul>
-    </header>
+		<ul class="sidenav" id="mobile-demo">
+            <li><h4 class="center-align brown-text text-darken 4">Treatment Manager</h4></li>
+            <li><a href="{{ url_for('get_treatments') }}">Home</a></li>
+            {% if session.user %}
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('add_treatment') }}">New Treatment</a></li>
+                {% if session.user|lower == "Greg"|lower %}
+                    <li><a href="{{ url_for('get_clients') }}">Manage Clients</a></li>
+                {% endif %}
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
+		</ul>
+	</header>
+
+    <section>
+        <!-- flash messages -->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="row flashes">
+                        <h4 class="lighten-4 center-align">{{ message }}</h4>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </section>
 
     <main class="container">
         {% block content %}
         {% endblock %}
     </main>
 
-    <footer class="page-footer footernav">
-        <div class="container">
-            
-        </div>
-    </footer>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-
+    {% block scripts %}
+    {% endblock %}
 </body>
 </html>
