--- a/milestone3/templates/clients.html
+++ b/milestone3/templates/clients.html
@@ -1,32 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="text-darken-4 center-align">Clients</h3>
+    <h3 class="brown-text text-darken-4 center-align">Manage Clients</h3>
 
-<div class="row">
-    <div class="col s12 center-align">
-        <a href="{{ url_for('add_client') }}" class="btn-large orange darken-2">
-            Add Client <i class="fas fa-plus-square right"></i>
-        </a>
-    </div>
-</div>
-
-<div class="row">
-    {% for client in clients %}
-    <div class="col s12 m6 l3">
-        <div class="card orange darken-4 center-align">
-            <div class="card-content white-text">
-                <span class="card-title">{{ client.client_name }}  - <i class="fas fa-cog"></i></span>
-                <div>
-                <div class="card-action cog">
-                    <a href="{{ url_for('edit_client', client_id=client.id) }}" class="btn green accent-4">Edit</a>
-                    <a href="{{ url_for('delete_client', client_id=client.id) }}" class="btn red">Delete</a>
-                </div>
-            </div>
-            </div>
+    <div class="row">
+        <div class="col s12 center-align">
+            <a href="{{ url_for('add_client') }}" class="btn-large brown darken-2 text-shadow">
+                Add Client <i class="fas fa-plus-square right"></i>
+            </a>
         </div>
     </div>
-    {% endfor %}
-</div>
+
+    <div class="row">
+        {% for client in clients %}
+            <div class="col s12 m3">
+                <div class="card brown darken-4 text-shadow center-align">
+                    <div class="card-content white-text">
+                        <span class="card-title">{{ client.client_name }}</span>
+                    </div>
+                    <div class="card-action">
+                        <a href="{{ url_for('edit_client', client_id=client.id) }}" class="btn green accent-4">Edit</a>
+                        <a href="{{ url_for('delete_client', client_id=client.id) }}" class="btn red lighten-1">Delete</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
