--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -1,27 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="text-darken-4 center-align">Edit Client</h3>
+    <h3 class="brown-text text-darken-4 center-align">Edit Client</h3>
 
-<div class="row card-panel grey lighten-5">
-    <form class="col s12" method="POST" action="{{ url_for('edit_client', client_id=client.id) }}">
-        <!-- client name -->
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="fas fa-folder-open prefix text-darken-4"></i>
-                <input id="client_name" name="client_name" value="{{ client.client_name }}" minlength="3" maxlength="25" type="text" class="validate" required>
-                <label for="client_name">Client Name</label>
+    <div class="row card-panel grey lighten-5">
+        <form class="col s12" method="POST" action="{{ url_for('edit_client', client_id=client.id) }}">
+            <!-- client name -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                    <input id="client_name" name="client_name" minlength="3" maxlength="25"
+                        type="text" value="{{ client.client_name }}" class="validate" required>
+                    <label for="client_name">Client Name</label>
+                </div>
             </div>
-        </div>
-        <!-- submit button -->
-        <div class="row">
-            <div class="col s12 center-align">
-                <button type="submit" class="btn-large orange darken-1">
-                    Edit Client <i class="fas fa-edit right"></i>
-                </button>
+            <!-- submit button -->
+            <div class="row">
+                <div class="col s12 center-align">
+                    <a href="{{ url_for('get_clients') }}" class="btn-large red text-shadow">
+                        Cancel <i class="fas fa-times-circle right"></i>
+                    </a>
+                    <button type="submit" class="btn-large brown darken-1 text-shadow">
+                        Edit Client <i class="fas fa-edit right"></i>
+                    </button>
+                </div>
             </div>
-        </div>
-    </form>
-</div>
+        </form>
+    </div>
 
 {% endblock %}
