--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -10,7 +10,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
                     <input id="client_name" name="client_name" minlength="3" maxlength="25"
-                        type="text" value="{{ client.client_name }}" class="validate" required>
+                        type="text" value="{{ user.fullname }}" class="validate" required>
                     <label for="client_name">Client Name</label>
                 </div>
             </div>
