--- a/milestone3/templates/add_client.html
+++ b/milestone3/templates/add_client.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="brown-text text-darken-4 center-align">Add Client</h3>
+    <h3 class="brown-text text-darken-4 center-align">Personal Registration Details</h3>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('add_client') }}">
@@ -14,11 +14,38 @@
                     <label for="client_name">Client Name</label>
                 </div>
             </div>
+            <!-- client Date of Birth -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                    <input id="client_dob" name="client_dob" minlength="3" maxlength="25"
+                        type="date" class="validate" required>
+                    <label for="client_dob">Date of Birth</label>
+                </div>
+            </div>
+            <!-- client email -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                    <input id="client_email" name="client_email" minlength="3" maxlength="50"
+                        type="email" class="validate" required>
+                    <label for="client_email">Email</label>
+                </div>
+            </div>
+            <!-- client phone number -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                    <input id="client_phone" name="client_phone" minlength="5" maxlength="15"
+                    pattern="^[0-9]{5,15}$" type="text" class="validate" required>
+                    <label for="client_phone">Phone Number</label>
+                </div>
+            </div>
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
                     <button type="submit" class="btn-large brown darken-1 text-shadow">
-                        Add Client <i class="fas fa-plus-square right"></i>
+                        Finish Registration <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
             </div>
