--- a/milestone3/templates/clients.html
+++ b/milestone3/templates/clients.html
@@ -12,15 +12,15 @@
     </div>
 
     <div class="row">
-        {% for client in clients %}
+        {% for user in users %}
             <div class="col s12 m3">
                 <div class="card brown darken-4 text-shadow center-align">
                     <div class="card-content white-text">
-                        <span class="card-title">{{ client.client_name }}</span>
+                        <span class="card-title">{{ user.fullname }}</span>
                     </div>
                     <div class="card-action">
-                        <a href="{{ url_for('edit_client', client_id=client.id) }}" class="btn green accent-4">Edit</a>
-                        <a href="{{ url_for('delete_client', client_id=client.id) }}" class="btn red lighten-1">Delete</a>
+                        <a href="{{ url_for('edit_client', user_id=user.id) }}" class="btn green accent-4">Edit</a>
+                        <a href="{{ url_for('delete_client', user_id=user.id) }}" class="btn red lighten-1">Delete</a>
                     </div>
                 </div>
             </div>
