--- a/milestone3/templates/edit_treatment.html
+++ b/milestone3/templates/edit_treatment.html
@@ -46,24 +46,24 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-calendar-alt prefix brown-text text-darken-4"></i>
-                    <input id="due_date" name="due_date" type="text"
-                        value="{{ treatment.due_date }}" class="datepicker validate" required>
-                    <label for="due_date">Due Date</label>
+                    <input id="treatment_date" name="treatment_date" type="text"
+                        value="{{ treatment.treatment_date }}" class="datepicker validate" required>
+                    <label for="treatment_date">Treatment Date</label>
                 </div>
             </div>
-            <!-- is urgent toggle -->
+            <!-- is follow up toggle -->
 			<div class="row">
 				<div class="input-field col s12">
 					<div class="switch">
                         <i class="fas fa-exclamation-circle prefix brown-text text-darken-4"></i>
-						<label for="is_urgent">
-                            {% if treatment.is_urgent == "on" %}
-                                <input type="checkbox" id="is_urgent" name="is_urgent" checked>
+						<label for="follow_up">
+                            {% if treatment.follow_up == "on" %}
+                                <input type="checkbox" id="follow_up" name="follow_up" checked>
                             {% else %}
-                                <input type="checkbox" id="is_urgent" name="is_urgent">
+                                <input type="checkbox" id="follow_up" name="follow_up">
                             {% endif %}
                             <span class="lever"></span>
-                            Is Urgent
+                            Follow Up Required
                         </label>
 					</div>
 				</div>
