--- a/milestone3/templates/register.html
+++ b/milestone3/templates/register.html
@@ -6,7 +6,7 @@
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
             <div class="card-panel">
-                <!-- username -->
+                <!-- Username -->
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-plus prefix brown-text text-darken-4"></i>
@@ -15,6 +15,43 @@
 						<label for="username">Username</label>
 					</div>
                 </div>
+
+                <!-- Full Name -->
+                <div class="row">
+					<div class="input-field col s12">
+						<i class="fas fa-user-plus prefix brown-text text-darken-4"></i>
+						<input id="fullname" name="fullname" type="text" minlength="5"
+                            maxlength="35" class="validate" required>
+						<label for="fullname">Full name</label>
+					</div>
+                </div>
+                <!-- client Date of Birth -->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                        <input id="dob" name="dob" minlength="3" maxlength="25"
+                            type="date" class="validate" required>
+                        <label for="dob">Date of Birth</label>
+                    </div>
+                </div>
+                <!-- client email -->
+              <div class="row">
+                  <div class="input-field col s12">
+                      <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                        <input id="email" name="email" minlength="3" maxlength="50"
+                            type="email" class="validate" required>
+                        <label for="email">Email</label>
+                   </div>
+                </div>
+               <!-- client phone number -->
+                <div class="row">
+                   <div class="input-field col s12">
+                       <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
+                       <input id="phone" name="phone" minlength="5" maxlength="15"
+                       pattern="^[0-9]{5,15}$" type="text" class="validate" required>
+                       <label for="phone">Phone Number</label>
+                  </div>
+               </div>
                 <!-- passowrd -->
                 <div class="row">
                     <div class="input-field col s12">
