Reworking the treatments page

--- a/milestone3/templates/add_client.html
+++ b/milestone3/templates/add_client.html
@@ -1,55 +1,74 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="brown-text text-darken-4 center-align">Personal Registration Details</h3>
+    <h3 class="brown-text text-darken-4 center-align">Add New Client Details</h3>
 
-    <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('add_client') }}">
-            <!-- client name -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
-                    <input id="client_name" name="client_name" minlength="3" maxlength="25"
-                        type="text" class="validate" required>
-                    <label for="client_name">Client Name</label>
+    <div class="row">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+            <div class="card-panel">
+                <!-- Username -->
+                <div class="row">
+					<div class="input-field col s12">
+						<i class="fas fa-user-plus prefix brown-text text-darken-4"></i>
+						<input id="username" name="username" type="text" minlength="5"
+                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+						<label for="username">Username</label>
+					</div>
                 </div>
-            </div>
-            <!-- client Date of Birth -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
-                    <input id="client_dob" name="client_dob" minlength="3" maxlength="25"
-                        type="date" class="validate" required>
-                    <label for="client_dob">Date of Birth</label>
+
+                <!-- Full Name -->
+                <div class="row">
+					<div class="input-field col s12">
+						<i class="fas fa-user prefix brown-text text-darken-4"></i>
+						<input id="fullname" name="fullname" type="text" minlength="5"
+                            maxlength="35" class="validate" required>
+						<label for="fullname">Full name</label>
+					</div>
                 </div>
-            </div>
-            <!-- client email -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
-                    <input id="client_email" name="client_email" minlength="3" maxlength="50"
-                        type="email" class="validate" required>
-                    <label for="client_email">Email</label>
+                <!-- client Date of Birth -->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="fas fa-calendar-alt prefix brown-text text-darken-4"></i>
+                        <input id="dob" name="dob" minlength="3" maxlength="25"
+                            type="date" class="validate" required>
+                        <label for="dob">Date of Birth</label>
+                    </div>
                 </div>
-            </div>
-            <!-- client phone number -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix brown-text text-darken-4"></i>
-                    <input id="client_phone" name="client_phone" minlength="5" maxlength="15"
-                    pattern="^[0-9]{5,15}$" type="text" class="validate" required>
-                    <label for="client_phone">Phone Number</label>
+                <!-- client email -->
+              <div class="row">
+                  <div class="input-field col s12">
+                      <i class="fas fa-envelope prefix brown-text text-darken-4"></i>
+                        <input id="email" name="email" minlength="3" maxlength="50"
+                            type="email" class="validate" required>
+                        <label for="email">Email</label>
+                   </div>
                 </div>
-            </div>
-            <!-- submit button -->
-            <div class="row">
-                <div class="col s12 center-align">
-                    <button type="submit" class="btn-large brown darken-1 text-shadow">
-                        Finish Registration <i class="fas fa-plus-square right"></i>
+               <!-- client phone number -->
+                <div class="row">
+                   <div class="input-field col s12">
+                       <i class="fas fa-phone prefix brown-text text-darken-4"></i>
+                       <input id="phone" name="phone" minlength="5" maxlength="15"
+                       pattern="^[0-9]{5,15}$" type="text" class="validate" required>
+                       <label for="phone">Phone Number</label>
+                  </div>
+               </div>
+                <!-- passowrd -->
+                <div class="row">
+                    <div class="input-field col s12">
+						<i class="fas fa-user-lock prefix brown-text text-darken-4"></i>
+                        <input id="password" name="password" type="password" minlength="5"
+                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                        <label for="password">Password</label>
+                    </div>
+                </div>
+                <!-- register -->
+                <div class="row">
+                    <button type="submit" class="col s12 btn-large brown darken-4 text-shadow">
+                        Add Client <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
             </div>
         </form>
     </div>
-
+   
 {% endblock %}
