--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -4,7 +4,7 @@
     <h3 class="brown-text text-darken-4 center-align">Edit Client</h3>
 
     <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('edit_client', client_id=client.id) }}">
+        <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user.id) }}">
             <!-- client name -->
             <div class="row">
                 <div class="input-field col s12">
