--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -34,7 +34,7 @@
                     {% endif %}
                 </div>
                 <div class="col s9">
-                    <strong>{{ treatment.treatment_name }}</strong> : {{ treatment.treatment_date }}
+                    <strong> {{ treatment.treatment_name }}</strong> : {{ treatment.treatment_date }}
                     {% if treatment.follow_up == "on" %}
                         <i class="fas fa-exclamation-circle brown-text text-lighten-2 tooltipped"
                             data-position="right" data-tooltip="URGENT!"></i>
@@ -42,9 +42,24 @@
                 </div>
             </div>
             <div class="collapsible-body">
-                <strong>{{ treatment.client_name }}</strong>
-                <p>{{ treatment.treatment_description }}</p>
-                <p><em>by: {{ treatment.created_by }}</em></p>
+                <div class="row">
+                    <div class="col s6 m6">
+                        <strong>{{ treatment.user_name }}</strong>
+                        <strong>Subjective History: </strong>
+                        <p>{{ treatment.treatment_subjective }}</p>
+                        <strong>Observations: </strong>
+                        <p>{{ treatment.treatment_observation }}</p>
+                        <strong>Special/Functional Tests: </strong>
+                        <p>{{ treatment.treatment_special_tests }}</p>
+                    </div>
+                    <div class="col s6 m6">
+                        <strong>Range of Movement: </strong>
+                        <p>{{ treatment.treatment_rom }}</p>
+                        <strong>Palpation: </strong>
+                        <p>{{ treatment.treatment_palpation }}</p>
+                        <p><em>by: {{ treatment.created_by }}</em></p>
+                    </div>
+                </div>
             </div>
         </li>
         {% endfor %}
